--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build": "react-scripts build",
+    "start": "react-scripts start"
   },
   "dependencies": {
     "@react-three/drei": "^10.7.4",
