--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "build": "vite build", 
+  "dev": "vite start",
+  "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "build": "react-scripts build",
+  
     "start": "react-scripts start"
   },
   "dependencies": {
