--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "build": "vite build", 
-  "dev": "vite start",
+"scripts": {
+  "build": "vite build",
+  "dev": "vite",
   "preview": "vite preview",
-    "lint": "eslint .",
-  
-    "start": "react-scripts start"
-  },
+  "lint": "eslint .",
+  "start": "react-scripts start" 
+},
   "dependencies": {
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
